# sphinx-autobuild

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .ruff.toml  .travis.yml  .virtualenv  AUTHORS  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  NEWS  NEWS.rst  README  README.md  README.rst  entry-points.ini  fabfile.py  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-testing.txt  requirements.txt  setup.py  sphinx_autobuild.py  tox.ini
.github/workflows/: ci.yml  create-release.yml
docs/: Makefile  conf.py  index.rst
fabtasks/: packaging.py
sphinx-autobuild/: __init__.py
sphinx_autobuild/: __init__.py  __main__.py  _core.py  _hacks.py  build.py  filter.py  ignore.py  middleware.py  server.py  utils.py
sphinx_autobuild/test/: test_autobuild.py  test_ignored.py
sphinx_autobuild/tests/: test_autobuild.py
src/sphinx_autobuild/: __init__.py  __main__.py  _core.py  _hacks.py  build.py  cli.py  ignore.py  sphinx.py  utils.py  watcher.py
tests/: test_application.py  test_autobuild.py  test_cli.py  test_ignore.py  test_ignored.py
