[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit_core>=3.7",
]

[project]
name = "sphinx-autobuild"
description = "Rebuild Sphinx documentation on changes, with hot reloading in the browser."
readme = "README.rst"
license.text = "MIT"
authors = [{name = "Adam Turner"}, {name = "Jonathan Stoppani", email = "jonathan@stoppani.name"}]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Framework :: Sphinx",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Documentation",
  "Topic :: Documentation :: Sphinx",
  "Topic :: Software Development",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "colorama",
  "sphinx",
  "starlette>=0.35",
  "uvicorn>=0.25",
  "watchfiles",
  "websockets>=11",
]
[project.optional-dependencies]
docs = [
]
test = [
  "pytest>=6",
  "pytest-cov",
]
[project.urls]
Changelog = "https://github.com/sphinx-doc/sphinx-autobuild/blob/main/NEWS.rst"
Documentation = "https://github.com/sphinx-doc/sphinx-autobuild#readme"
Download = "https://pypi.org/project/sphinx-autobuild/"
"Issue tracker" = "https://github.com/sphinx-doc/sphinx-autobuild/issues"
Source = "https://github.com/sphinx-doc/sphinx-autobuild"
[project.scripts]
sphinx-autobuild = "sphinx_autobuild.__main__:main"

[tool.flit.sdist]
include = [
    "AUTHORS.rst",
    "LICENSE.rst",
    "NEWS.rst",
    # Tests
    "tests/",
    "noxfile.py",
]

[tool.pyproject-fmt]
max_supported_python = "3.13"

[tool.coverage.run]
branch = true
omit = [
  "*/conftest.py",
  "docs/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "NOCOV",
  "if __name__ == .__main__.:"
]

[tool.coverage.html]
directory = ".htmlcov"
